--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,20 @@
 ---
-
+import CountryCapitalGame from "../components/CountryCapitalGame";
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Astro</title>
+  </head>
+  <body>
+    <h1>Country Capital Matching game</h1>
+    <CountryCapitalGame
+      data={{ Germany: "Berlin", USA: "Washington D.C." }}
+      client:only
+    />
+  </body>
 </html>
