Updated README.md, various small tweaks

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,20 @@ import CountryCapitalGame from "../components/CountryCapitalGame";
   </head>
   <body>
     <h1>Country Capital Matching game</h1>
+    <p>Click on 2 options to match them together!</p>
     <CountryCapitalGame
-      data={{ Germany: "Berlin", USA: "Washington D.C." }}
+      data={{
+        Germany: "Berlin",
+        USA: "Washington D.C.",
+        France: "Paris",
+        Italy: "Rome",
+        Spain: "Madrid",
+        UK: "London",
+        China: "Beijing",
+        Japan: "Tokyo",
+        India: "New Delhi",
+        Russia: "Moscow",
+      }}
       client:only
     />
   </body>
